fix alignment of button lists

--- a/app/styles/shared/_buttons.css
+++ b/app/styles/shared/_buttons.css
@@ -64,25 +64,20 @@ button,
 }
 
 .btn-group-item {
-  @mixin clearfix;
   border-top: 1px solid $brand-primary;
-  padding: 0 20px;
+  padding: 20px 50px 20px 20px;
   cursor: pointer;
 
   .icon-small {
-    margin: 10px 0;
+    vertical-align: middle;
 
     &:first-child {
-      float: left;
       margin-right: 10px;
     }
 
     &:last-child {
-      float: right;
+      position: absolute;
+      right: 10px;
     }
-  }
-
-  .btn {
-    padding-top: 16px;
   }
 }
